--- a/app/src/main/res/layout/fragment_land_ownership_selection.xml
+++ b/app/src/main/res/layout/fragment_land_ownership_selection.xml
@@ -13,12 +13,14 @@
         android:layoutDirection="locale">
         <Spinner
             android:id="@+id/spinLandOwned"
-            android:layout_width="267dp"
+            android:layout_width="match_parent"
             android:layout_height="35dp"
             android:gravity="center_horizontal"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="20dp"
             android:textSize="16sp"
+            android:layout_marginStart="60dp"
+            android:layout_marginEnd="60dp"
             android:background="@drawable/attachment_spinner_bg"
             android:textColor="@color/black"
             android:textStyle="bold"
