--- a/app/src/main/res/layout/fragment_happiness.xml
+++ b/app/src/main/res/layout/fragment_happiness.xml
@@ -5,17 +5,18 @@
             name="fragmentHappinessVM"
             type="dm.sime.com.kharetati.view.viewModels.HappinessViewModel" />
     </data>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="40dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <WebView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="680dp"
             android:id="@+id/webHappiness"
-            android:layout_marginBottom="40dp"/>
+            />
     </LinearLayout>
-
-
-
-
+    </ScrollView>
 </layout>
