1.BookMarks issue fix 2.Orientation issue fix

--- a/app/src/main/res/drawable/stepper_background_completed.xml
+++ b/app/src/main/res/drawable/stepper_background_completed.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-        android:shape="oval">
-        <size android:width="40dp" android:height="40dp"/>
-        <solid android:color="@color/green"/>
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+        <item>
+                <shape android:shape="oval">
+                        <solid android:color="@color/green"/>
+                </shape>
+        </item>
+        <item
+            android:drawable="@drawable/ic_done"
+            android:bottom="8dp"
+            android:left="8dp"
+            android:right="8dp"
+            android:top="8dp"/>
+</layer-list>
