--- a/app/src/main/res/layout/fragment_parent_siteplan.xml
+++ b/app/src/main/res/layout/fragment_parent_siteplan.xml
@@ -104,6 +104,7 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
                                     android:text="1"
+                                    android:id="@+id/stepperOneText"
                                     android:layout_gravity="center"
                                     android:gravity="center"
                                     android:textAlignment="center"
@@ -113,6 +114,7 @@
                                 android:layout_toRightOf="@+id/txtStepperOne"
                                 android:layout_width="wrap_content"
                                 android:layout_height="1dp"
+                                android:id="@+id/view1"
                                 android:background="@color/light_blue"
                                 android:layout_centerVertical="true"/>
                         </RelativeLayout>
@@ -131,6 +133,7 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
                                     android:text="2"
+                                    android:id="@+id/stepperTwoText"
                                     android:layout_gravity="center"
                                     android:gravity="center"
                                     android:textAlignment="center"
@@ -140,6 +143,7 @@
                                 android:layout_toRightOf="@+id/txtStepperTwo"
                                 android:layout_width="wrap_content"
                                 android:layout_height="1dp"
+                                android:id="@+id/view2"
                                 android:background="@color/light_blue"
                                 android:layout_centerVertical="true"/>
                         </RelativeLayout>
@@ -158,6 +162,7 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
                                     android:text="3"
+                                    android:id="@+id/stepperThreeText"
                                     android:layout_gravity="center"
                                     android:gravity="center"
                                     android:textAlignment="center"
@@ -167,6 +172,7 @@
                                 android:layout_toRightOf="@+id/txtStepperThree"
                                 android:layout_width="wrap_content"
                                 android:layout_height="1dp"
+                                android:id="@+id/view3"
                                 android:background="@color/light_blue"
                                 android:layout_centerVertical="true"/>
                         </RelativeLayout>
@@ -185,6 +191,7 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
                                     android:text="4"
+                                    android:id="@+id/stepperFourText"
                                     android:layout_gravity="center"
                                     android:gravity="center"
                                     android:textAlignment="center"
