--- a/app/src/main/res/layout/fragment_bottom_navigation.xml
+++ b/app/src/main/res/layout/fragment_bottom_navigation.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/maroon_dark"
+        android:id="@+id/bottomSheetMore"
         android:orientation="vertical">
         <RelativeLayout
             android:layout_width="match_parent"
