--- a/app/src/main/res/layout/fragment_request_details.xml
+++ b/app/src/main/res/layout/fragment_request_details.xml
@@ -263,10 +263,11 @@
                     android:src="@drawable/dubai_municipality"/>
             </LinearLayout>
             <Button
-                android:layout_width="140dp"
-                android:layout_height="42dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:minWidth="100dp"
                 android:textSize="16sp"
-                android:layout_margin="24dp"
+                android:layout_margin="16dp"
                 android:gravity="center"
                 android:layout_gravity="center_horizontal"
                 android:id="@+id/payNow"
@@ -301,7 +302,7 @@
         android:id="@+id/done"
         android:textColor="@color/white"
         android:layout_gravity="bottom|center"
-        ></Button>
+        />
 
 </LinearLayout>
 </ScrollView>
