--- a/app/src/main/res/layout/fragment_bookmark.xml
+++ b/app/src/main/res/layout/fragment_bookmark.xml
@@ -20,10 +20,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:maxLines="2"
-                android:text="Click on Bookmark details"
                 android:fontFamily="@font/dubai_font"
                 android:textSize="20dp"
                 android:visibility="gone"
+                android:textAlignment="center"
                 android:id="@+id/textHeading"
                 android:textColor="@color/black"
                 android:layout_marginVertical="10dp"/>
