--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,7 +20,7 @@
             android:layout_height="match_parent"
             android:clickable="true"
             android:scaleType="fitXY"
-            android:src="@drawable/building"
+            android:src="@mipmap/building"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -216,33 +216,35 @@
                     android:layout_marginEnd="8dp"
                     android:layoutDirection="locale"
                     android:weightSum="1"
+                    android:gravity="center_vertical"
                     android:layout_gravity="center_vertical"
                     android:id="@+id/layoutRememberMe"
                     android:layout_marginBottom="8dp"
                     android:orientation="horizontal">
                     <CheckBox
                         android:layout_width="match_parent"
-                        android:layout_height="35dp"
+                        android:layout_height="match_parent"
                         android:layout_gravity="start"
                         android:clickable="true"
+                        android:gravity="center_vertical|start"
                         android:textColor="@color/textColor"
                         android:id="@+id/chkRememberMe"
                         android:fontFamily="@font/dubai_font"
                         android:focusable="false"
-                        android:layout_weight=".62"
+                        android:layout_weight=".55"
                         android:textSize="14sp"
                         android:text="@string/rememberme" />
                     <TextView
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:id="@+id/txtForgotPassword"
                         android:layout_gravity="end"
-                        android:gravity="center|end"
+                        android:gravity="center_vertical|end"
                         android:layout_marginStart="16dp"
                         android:layout_marginEnd="16dp"
                         android:singleLine="false"
                         android:maxLines="2"
-                        android:layout_weight=".38"
+                        android:layout_weight=".45"
                         android:fontFamily="@font/dubai_font"
                         android:text="@string/forgot_username_password"
                         android:textAlignment="viewEnd"
@@ -335,7 +337,7 @@
                 android:layout_gravity="center">
                 <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
                     android:layout_marginBottom="4dp"
