--- a/app/src/main/res/layout/fragment_land_ownership_selection.xml
+++ b/app/src/main/res/layout/fragment_land_ownership_selection.xml
@@ -12,6 +12,8 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
+        android:textDirection="locale"
+        android:id="@+id/layout"
         android:layout_height="match_parent"
         android:gravity="center_horizontal"
         android:layoutDirection="locale">
@@ -19,12 +21,13 @@
             android:id="@+id/spinLandOwned"
             android:layout_width="match_parent"
             android:layout_height="35dp"
-            android:gravity="center_horizontal"
-            android:layout_gravity="center_horizontal"
+            android:textDirection="locale"
+            android:layout_gravity="center_vertical|start"
             android:layout_marginTop="20dp"
-            android:textSize="16sp"
-            android:layout_marginStart="60dp"
-            android:layout_marginEnd="60dp"
+            android:textSize="14sp"
+            android:layout_marginStart="50dp"
+            android:layout_marginEnd="50dp"
+            android:textAlignment="viewStart"
             android:background="@drawable/attachment_spinner_bg"
             android:textColor="@color/black"
             android:textStyle="bold"
@@ -32,9 +35,12 @@
             android:visibility="visible"
              />
         <RadioGroup
-            android:layout_width="267dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
+            android:layoutDirection="locale"
+            android:layout_marginStart="50dp"
+            android:layout_marginEnd="50dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="20dp"
             android:id="@+id/rg">
@@ -43,10 +49,9 @@
                 android:id="@+id/rb_isOwner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
                 android:buttonTint="@android:color/holo_blue_dark"
                 android:checked="false"
+                android:textAlignment="viewStart"
                 android:text="@string/iamowner"
                 android:layout_marginBottom="30dp"
                 android:visibility="visible"
@@ -57,10 +62,7 @@
                 android:id="@+id/rb_notOwner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginStart="8dp"
+                android:textAlignment="viewStart"
                 android:layout_marginBottom="30dp"
                 android:buttonTint="@android:color/holo_blue_dark"
                 android:text="@string/iamnotowner"
