--- a/app/src/main/res/layout/attachment_drp_ar.xml
+++ b/app/src/main/res/layout/attachment_drp_ar.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layoutDirection="rtl">
     <TextView
         android:id="@+id/txtLandOwner"
         android:singleLine="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textDirection="locale"
+        android:textAlignment="viewStart"
         android:layout_centerVertical="true"
         android:layout_marginStart="5dp"
         android:layout_marginLeft="5dp"
         android:textStyle="bold"
-        style="@style/font_large_bold"
+        style="@style/font_medium_bold"
         android:fontFamily="@font/dubai_font"
         android:textColor="@color/black" />
     <ImageView
