--- a/app/src/main/res/layout/fragment_pay.xml
+++ b/app/src/main/res/layout/fragment_pay.xml
@@ -18,6 +18,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center"
+        android:id="@+id/rootView"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_marginEnd="@dimen/activity_horizontal_margin"
         android:layoutDirection="locale">
